# familiar

./: AGENTS.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: daemon.rs  error.rs  heartbeat.rs  lib.rs  main.rs
src/agent/: compaction.rs  conversation.rs  mod.rs
src/agent/providers/: mod.rs
src/channel/: discord.rs  mod.rs  repl.rs  tui_channel.rs
src/cli/: init.rs  mod.rs  repl.rs
src/config/: mod.rs
src/egregore/: client.rs  mod.rs
src/hooks/: mod.rs  shell.rs
src/identity/: mod.rs
src/mcp/: mod.rs
src/profile/: extract.rs  mod.rs
src/store/: context.rs  conversations.rs  mod.rs  sessions.rs  snapshots.rs  usage.rs
src/tui/: layout.rs  mod.rs  ui.rs
src/tui/widgets/: conversation.rs  input.rs  mod.rs  sidebar.rs  status_bar.rs
src/workspace/: heartbeat.rs  injection.rs  mod.rs  seeds.rs
tests/: smoke.rs
