[package]
name = "familiar"
version = "0.1.0"
edition = "2021"
authors = ["Louis Grenzebach <pk@zalgo.net>"]
description = "Personal companion for the Thallus decentralized AI infrastructure"
license = "MIT"

[dependencies]
thallus-core = { path = "../thallus-core" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
rand = "0.8"
hex = "0.4"
rustyline = "14"
dirs = "5"
shellexpand = "3"
urlencoding = "2"
regex = "1"
base64 = "0.22"
sha2 = "0.10"
serde_yaml = "0.9"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
reqwest-eventsource = "0.6"
eventsource-stream = "0.2"
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui-textarea = "0.8.0"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[lib]
name = "familiar"
path = "src/lib.rs"

[[bin]]
name = "familiar"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
